--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Blog</title>
 
 	<meta charset="utf-8">
+	<meta name="author" content="Arjun Kumar">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
